src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_literals_tests__illegal_literal_time_out_of_order_segments_test.snap
---
source: src/parser/tests/parse_errors/parse_error_literals_tests.rs
expression: diagnostics
---
error[E010]: Invalid TIME Literal: segments out of order, use d-h-m-s-ms
  ┌─ <internal>:3:13
  │
3 │             T#1s2h3d;
  │             ^^^^^^^^ Invalid TIME Literal: segments out of order, use d-h-m-s-ms
